--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@ static/
 web_admin/__pycache__/
 Migration/__pycache__/
 traya_clone/__pycache__/
+user/__pycache__/
 *.pyc
 web_admin/migrations/
 Migration/migrations/
 traya_clone/migrations/
+user/migrations/
 __pycache__
 **/__pycache__
 **/migrations
