--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,13 @@ Migration/__pycache__/
 traya_clone/__pycache__/
 user/__pycache__/
 *.pyc
-# web_admin/migrations/
-# Migration/migrations/
-# traya_clone/migrations/
-# user/migrations/
+web_admin/migrations/
+Migration/migrations/
+traya_clone/migrations/
+user/migrations/
 __pycache__
 **/__pycache__
-# **/migrations
+**/migrations
 =======
 **/.DS_Store
-# db.sqlite3
+db.sqlite3
